--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proyecto-coderhouse",
   "version": "1.0.0",
-  "description": "proyecto coderhouse",
+  "description": "pagina del proyecto de coder-house sobre venta de cerveza artesanal",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/matiasarielc/proyecto-coderhouse.git"
   },
-  "author": "",
+  "author": "Matias Castro",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/matiasarielc/proyecto-coderhouse/issues"
